--- a/Voquangtuantesst.ipynb
+++ b/Voquangtuantesst.ipynb
@@ -411,7 +411,7 @@
     }
    ],
    "source": [
-    "##In ra số lượng thành phần chính tối ưu\n",
+    "##thu nghiem tho\n",
     "print(f'Số lượng thành phần chính tối ưu là {optimal_num_components}')"
    ]
   }
