--- a/Voquangtuantesst.ipynb
+++ b/Voquangtuantesst.ipynb
@@ -414,6 +414,16 @@
     "##thu nghiem tho\n",
     "print(f'Số lượng thành phần chính tối ưu là {optimal_num_components}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##thu nghiem tho\n",
+    "print"
+   ]
   }
  ],
  "metadata": {
